--- a/.github/workflows/editorconfig-check.yml
+++ b/.github/workflows/editorconfig-check.yml
@@ -1,21 +1,33 @@
-name: EditorConfig Check
+name: Check .editorconfig
 
-on: [push, pull_request]
+on: 
+  pull_request:
+    paths:
+      - '**/*.cs'
+  push:
+    branches:
+      - master
+      - TestBranch
 
 jobs:
   check-editorconfig:
-    runs-on: ubuntu-latest
-    
+    runs-on: windows-latest
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    
-    - name: Install eclint
-      run: npm install -g eclint
-    
-    - name: Check code against .editorconfig
-      run: eclint check .
-    
-    - name: Fail if eclint check fails
-      if: failure()
-      run: echo "Code does not conform to .editorconfig" && exit 1
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+
+      - name: Install eclint
+        run: npm install -g eclint
+
+      - name: Check code against .editorconfig
+        run: eclint check .
+
+      - name: Fail if eclint check fails
+        if: failure()
+        run: echo "Code does not conform to .editorconfig" && exit 1
