--- a/.github/workflows/editorconfig-check.yml
+++ b/.github/workflows/editorconfig-check.yml
@@ -1,39 +1,28 @@
 name: Check .editorconfig
-uses: github/super-linter@v4
-env:
-  VALIDATE_ALL_CODEBASE: false
-  DEFAULT_BRANCH: master
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  EDITORCONFIG_FILE_NAME: .editorconfig
+
 
 on: 
   pull_request:
-    paths:
-      - '**/*.cs'
+  branches: [master]
+  
   push:
-    branches:
-      - master
-      - TestBranch
+  branches: [master, TestBranch]
 
 jobs:
-  check-editorconfig:
-    runs-on: windows-latest
+  build:
+  name: Check .editorconfig
+  runs-on: windows-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Install Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-
-      - name: Install eclint
-        run: npm install -g eclint
-
-      - name: Check code against .editorconfig
-        run: eclint check .
-
-      - name: Fail if eclint check fails
-        if: failure()
-        run: echo "Code does not conform to .editorconfig" && exit 1
+  steps:
+    - name: Checkout Code
+      uses: actions/checkout@v2
+      with: 
+        fetch-depth: 0
+    
+    - name: Check .editorconfig
+      uses: github/super-linter@v4
+      env:
+        VALIDATE_ALL_CODEBASE: false
+        DEFAULT_BRANCH: master
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        EDITORCONFIG_FILE_NAME: .editorconfig
