--- a/.github/workflows/editorconfig-check.yml
+++ b/.github/workflows/editorconfig-check.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm install -g eclint
 
       - name: Check code against .editorconfig
-        run: eclint check .
+        run: eclint check *
 
       - name: Fail if eclint check fails
         if: failure()
